Changed test conf class